# second-brain-template

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: index-file.md  onboard.md  sync.md  transcribe.md
.system/docs/plans/: 2026-05-15-second-brain-template.md  2026-05-17-telegram-brain-bot.md  2026-05-25-telegram-send-files.md  2026-05-26-telegram-bot-helm.md  2026-05-29-telegram-voice-reply-tts.md
.system/docs/specs/: 2026-05-15-second-brain-template-design.md  2026-05-17-telegram-brain-bot-design.md  2026-05-25-telegram-send-files-design.md  2026-05-29-telegram-voice-reply-tts-design.md
.system/services/telegram-bot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  notify-tg.sh  package-lock.json  package.json  pnpm-lock.yaml  send-file-tg.sh  send-voice-tg.sh  tsconfig.json  vitest.config.ts
.system/services/telegram-bot/prompts/: telegram-mode.md
.system/services/telegram-bot/src/: bot.ts  claude.ts  config.ts  git.ts  index.ts  notify.ts  protocol.ts  send-file.ts  session.ts  tts.ts  upload.ts  voice.ts
.system/services/telegram-bot/test/: claude.test.ts  config.test.ts  git.test.ts  notify.test.ts  protocol.test.ts  send-file.test.ts  session.test.ts  (+3 more)
.system/tools/transcriber/: .env.example  README.md  pyproject.toml
.system/tools/transcriber/deepgram_transcriber/: cli.py
archive/: index.md
areas/: index.md  user.md
docs/specs/: 2026-05-26-telegram-bot-helm-design.md
docs/superpowers/specs/: 2026-05-25-telegram-send-files-design.md
inbox/: dump.md  index.md
projects/: index.md
(+10 files in other folders)
